// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RBAC ThumbnailSelect renders items with RBAC restrictions: rbac items should be disabled 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group ThumbnailSelect--mainContainer"
    >
      <div
        class="bp3-form-content"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <label
                class="Thumbnail--squareCardContainer"
              >
                <div
                  class="bp3-card bp3-elevation-0 Card--card Thumbnail--squareCard Card--disabled"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="nav-organization"
                  >
                    <svg
                      height="26"
                      viewBox="0 0 16 16"
                      width="26"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h16v16H0z"
                        opacity="0.01"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M12.5 8.5v1.533h2c.267 0 .5.234.5.5V14.5c0 .267-.233.5-.5.5h-5a.513.513 0 01-.5-.5v-3.967c0-.266.233-.5.5-.5h2V8.5h-7v1.533h2c.267 0 .5.234.5.5V14.5c0 .267-.233.5-.5.5h-5a.513.513 0 01-.5-.5v-3.967c0-.266.233-.5.5-.5h2V8.5h-1A.513.513 0 012 8c0-.267.233-.5.5-.5h5V5.967h-2a.513.513 0 01-.5-.5V1.5c0-.267.233-.5.5-.5h5c.267 0 .5.233.5.5v3.967c0 .266-.233.5-.5.5h-2V7.5h5c.267 0 .5.233.5.5s-.233.5-.5.5h-1zM10 2H6v2.967h4V2zM6 14H2v-2.967h4V14zm4 0h4v-2.967h-4V14z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <p
                  class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey500 StyledProps--margin-top-small"
                >
                  I1
                </p>
                <input
                  disabled=""
                  name="rRbacThumbnail"
                  type="checkbox"
                  value="i1"
                />
              </label>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RBAC ThumbnailSelect renders items without RBAC restrictions: non rbac items 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group ThumbnailSelect--mainContainer"
    >
      <div
        class="bp3-form-content"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <label
            class="Thumbnail--squareCardContainer"
          >
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
              tabindex="0"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="nav-organization"
              >
                <svg
                  height="26"
                  viewBox="0 0 16 16"
                  width="26"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    opacity="0.01"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12.5 8.5v1.533h2c.267 0 .5.234.5.5V14.5c0 .267-.233.5-.5.5h-5a.513.513 0 01-.5-.5v-3.967c0-.266.233-.5.5-.5h2V8.5h-7v1.533h2c.267 0 .5.234.5.5V14.5c0 .267-.233.5-.5.5h-5a.513.513 0 01-.5-.5v-3.967c0-.266.233-.5.5-.5h2V8.5h-1A.513.513 0 012 8c0-.267.233-.5.5-.5h5V5.967h-2a.513.513 0 01-.5-.5V1.5c0-.267.233-.5.5-.5h5c.267 0 .5.233.5.5v3.967c0 .266-.233.5-.5.5h-2V7.5h5c.267 0 .5.233.5.5s-.233.5-.5.5h-1zM10 2H6v2.967h4V2zM6 14H2v-2.967h4V14zm4 0h4v-2.967h-4V14z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <p
              class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
            >
              I1
            </p>
            <input
              name="nonRbacThumbnail"
              type="checkbox"
              value="i1"
            />
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
